--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "wds"
+    "start": "wds",
+    "dev": "nodemon node_modules/.bin/web-dev-server -- --watch"
   },
   "author": "Adam Bender",
   "license": "MIT",
@@ -19,7 +20,8 @@
   },
   "homepage": "https://github.com/bendera/wds-plugin-directory-index",
   "devDependencies": {
-    "@web/dev-server": "^0.4.6"
+    "@web/dev-server": "^0.4.6",
+    "nodemon": "^3.1.7"
   },
   "peerDependencies": {
     "@web/dev-server": "*"
